[project]
name = "qu-spatial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "cudf-cu12>=25.4.0",
    "cupy-cuda12x>=13.6.0",
    "cuspatial-cu12>=25.4.0",
    "geopandas>=1.1.1",
    "numpy>=2.2.6",
    "rmm-cu12>=25.4.0",
]
[tool.uv]
# Limit lock resolution to the target host platform to avoid resolving for unused splits (e.g., aarch64)
environments = ["platform_system == 'Linux' and platform_machine == 'x86_64'"]
